# fast_api_zero

./: .gitignore  pyproject.toml
tests/: test_app.py
